[project]
name = "hai5016-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.0.0",
    "psycopg2-binary>=2.9.11",
]
